--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
 <link href="css/reset.css" type="text/css" rel="stylesheet">
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/wheel.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 <!--[if IE]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
 </head>
 <body>
-<div id="venues" style="float: left"><ul/></div>
 <div id="wheel">
 <canvas id="canvas" width="1000" height="600"></canvas>
-</div>
-<div id="stats">
-<div id="counter"></div>
 </div>
 </body>
 </html>
