--- a/index.html
+++ b/index.html
@@ -2,16 +2,26 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<title>Wheel</title>
+<title>The Wheel of Jeopardy by Team Redneck Avengers</title>
 <link href="css/reset.css" type="text/css" rel="stylesheet">
+<link href="css/main.css" type="text/css" rel="stylesheet">
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/wheel.js"></script>
+<script type="text/javascript" src="js/jeopardy.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <!--[if IE]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
 </head>
 <body>
-<div id="wheel">
-<canvas id="canvas" width="1000" height="600"></canvas>
-</div>
+	<div id="container">
+		<div id="header">
+			<h1>The Wheel of Jeopardy</h1>
+			<h2>Team Redneck Avengers</h2>
+		</div>	
+		<div id="wheel">
+			<canvas id="canvas" width="600" height="400"></canvas>
+		</div>
+		<div id="jeopardy">
+		</div>
+	</div>
 </body>
 </html>
