--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 <link href="css/reset.css" type="text/css" rel="stylesheet">
 <link href="css/main.css" type="text/css" rel="stylesheet">
 <script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/player.js"></script>
+<script type="text/javascript" src="js/question.js"></script>
 <script type="text/javascript" src="js/wheel.js"></script>
 <script type="text/javascript" src="js/jeopardy.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
 <!--[if IE]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
 </head>
 <body>
@@ -17,6 +19,8 @@
 			<h1>The Wheel of Jeopardy</h1>
 			<h2>Team Redneck Avengers</h2>
 		</div>	
+		<div id="players">
+		</div>
 		<div id="wheel">
 			<canvas id="canvas" width="600" height="400"></canvas>
 		</div>
