--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 			<h1>The Wheel of Jeopardy</h1>
 			<h2>Team Redneck Avengers</h2>
 		</div>	
-		<div id="players">
-		</div>
+		<div id="players"></div>
+		<div id="spins">Spins: <span>0</span></div>
 		<div id="wheel">
 			<canvas id="canvas" width="600" height="400"></canvas>
 		</div>
